--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="index.css">
+    <script src="index.js"></script>
+    <script>
+        $(function(){
+            $("#home-page").load("home/home.html")
+        });
+    </script>
+</head>
+
 <body>
-    <p>Hello world</p>
-    <p>Test!!!</p>
+    <div id="home-page"></div>
+    <div>Another test</div>
 </body>
+
+</html>
