Added custom css and deleted src folder

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
     <meta name="description" content="A collection of Joel's interests. Including, but not limited to, music, books, hiking, games, and programming.">
     <meta name="keywords" content="Joel Davidson, joelwdavidson, Joel, music, games, writing">
 
+    <link rel="stylesheet" href="http://joelwdavidson.com/global-css/hub.css">
     <link rel="stylesheet" href="index.css">
+
     <script src="index.js"></script>
 </head>
 
 <body>
-    <div style="margin: 0px; color: white; padding-top: 150px; height: calc(100vh - 150px); background-image: url('images/background.jpg'); background-attachment: fixed; background-position: center; background-size: cover">
-        <div style="margin: auto; background-color: rgba(0,0,0,.7); max-width:50em; top: 150px; padding: 16px;"}}>
+    <div class="page-container">
+        <div class="content-container">
             <div style="text-align: center;">
                 <div className="row">
                     <h1>Joel Davidson</h1>
                 </div>
                 <div className="row">
-                    <img src="images/child-picture.jpg" width="200px" alt="A picture of me enjoying pizza"/>
+                    <img src="child-picture.jpg" width="200px" alt="A picture of me enjoying pizza"/>
                 </div>
                 <p>A site by and about Joel Davidson</p>
             </div>
@@ -30,14 +32,14 @@
                 <div className="3 col">
                     <h5 style="text-align: center">Table of Contents:</h5>
                     <div>
-                        <h5>Portfolio</h5>
-                        <h6><a href="src/GamePortfolio/gamePortfolio.html">Games I've Created</a></h6>
+                        <h4>Portfolio</h4>
+                        <h5><a href="GamePortfolio/gamePortfolio.html">Games I've Created</a></h5>
                     </div>
                     <div>
-                        <h5>Writing</h5>
-                        <h5><a href="src/Writing/Music/music.html">Music</h5></h6>
-                        <h6><a href="src/Writing/Books/books.html">Books</a></h6>
-                        <h6><a href="src/Writing/Games/games.html">Games</a></h6>
+                        <h4>Writing</h4>
+                        <h5><a href="Writing/Music/music.html">Music</h5></h5>
+                        <h5><a href="Writing/Books/books.html">Books</a></h5>
+                        <h5><a href="Writing/Games/games.html">Games</a></h5>
                     </div>
                 </div>
                 <div className="2 col">
