Added changes to hub.css

--- a/GamePortfolio/gamePortfolio.html
+++ b/GamePortfolio/gamePortfolio.html
@@ -1,9 +1,13 @@
 <html>
 
 
+<head>
+    <link rel="stylesheet" href="http://joelwdavidson.com/global-css/hub.css">
+</head>
+
 <body>
-<div style="margin: 0px; color: white; padding-top: 150px; background-image: url('game-background.jpg'); background-attachment: fixed; background-position: center; background-size: cover">
-    <div className="c" style="padding: 16px; margin: auto; background-color: rgba(0,0,0,.7); max-width: 50em;">
+<div class="page-container" style="background-image: url('background.jpg');">
+    <div class="content-container">
         <div className="row">
             <div className="7 col">
                 <h4>Joel Davidson's Games</h4>
