--- a/Writing/Games/games.html
+++ b/Writing/Games/games.html
@@ -1,9 +1,12 @@
 <html>
 
-<body>
+<head>
+    <link rel="stylesheet" href="http://joelwdavidson.com/global-css/hub.css">
+</head>
 
-<div style="margin: 0px; color: white; padding-top: 150px; min-height: 100vh; background-image: url('background.jpg'); background-attachment: fixed; background-position: center; background-size: cover;">
-    <div className="c" style="background-color: rgba(0,0,0,.7); max-width: 50em;">
+<body>
+<div class="page-container" style="background-image: url('background.jpg');">
+    <div class="content-container">
         <div style="text-align: center">
             <p>Some writings on games.</p>
         </div>
