--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="page-container">
+    <div class="page-container" style="background-image: url('background.jpg');">
         <div class="content-container">
             <div style="text-align: center;">
                 <div className="row">
