--- a/Writing/Books/books.html
+++ b/Writing/Books/books.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="http://joelwdavidson.com/global-css/hub.css">
     <script src="books.js"></script>
 </head>
 
 <body>
-
-<div style="margin: 0px; color: white; padding-top: 150px; min-height: 100vh; background-image: url('background.jpg'); background-attachment: fixed; background-position: center; background-size: cover">
-    <div className="c" style="background-color: rgba(0,0,0,.7); max-width: 50em">
+<div class="page-container" style="background-image: url('background.jpg');">
+    <div class="content-container">
         <div style="text-align: center">
             <p>Some writings on books.</p>
         </div>
