--- a/Writing/Music/music.html
+++ b/Writing/Music/music.html
@@ -1,5 +1,11 @@
-<div style="margin: 0px; color: white; padding-top: 150px; height: 100vh; background-image: url('background.jpg'); background-attachment: fixed; background-position: center; background-size: cover">
-    <div className="c" style="background-color: rgba(0,0,0,.7); max-width: 50em">
+<body>
+
+<head>
+    <link rel="stylesheet" href="http://joelwdavidson.com/global-css/hub.css">
+</head>
+
+<div class="page-container" style="background-image: url('background.jpg');">
+    <div class="content-container">
         <div style="text-align: center;">
             <p>Some writings on music.</p>
         </div>
@@ -16,3 +22,5 @@
         <div style="text-align: center; color: #ff9955">joelwdavidson@gmail.com</div>
     </div>
 </div>
+
+</body>
