--- a/GamePortfolio/gamePortfolio.html
+++ b/GamePortfolio/gamePortfolio.html
@@ -2,7 +2,7 @@
 
 
 <head>
-    <link rel="stylesheet" href="http://joelwdavidson.com/global-css/hub.css">
+    <link rel="stylesheet" type="test/css" href="https://joelwdavidson.com/global-css/hub.css">
 </head>
 
 <body>
