Moved to relative paths

--- a/Writing/Music/music.html
+++ b/Writing/Music/music.html
@@ -1,7 +1,7 @@
 <body>
 
 <head>
-    <link rel="stylesheet" type="test/css" href="https://joelwdavidson.com/global-css/hub.css">
+    <link rel="stylesheet" type="test/css" href="../../global-css/hub.css">
 </head>
 
 <div class="page-container" style="background-image: url('background.jpg');">
