--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="A collection of Joel's interests. Including, but not limited to, music, books, hiking, games, and programming.">
     <meta name="keywords" content="Joel Davidson, joelwdavidson, Joel, music, games, writing">
 
-    <link rel="stylesheet" type="test/css" href="https://joelwdavidson.com/global-css/hub.css">
-    <!-- <link rel="stylesheet" href="index.css"> -->
+    <link rel="stylesheet" type="test/css" href="global-css/hub.css">
+    <link rel="stylesheet" href="index.css">
 
     <script src="index.js"></script>
 </head>
