Did some more css changes and QoL

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A collection of Joel's interests. Including, but not limited to, music, books, hiking, games, and programming.">
     <meta name="keywords" content="Joel Davidson, joelwdavidson, Joel, music, games, writing">
 
-    <link rel="stylesheet" type="test/css" href="global-css/hub.css">
+    <link rel="stylesheet" href="global-css/hub.css">
     <link rel="stylesheet" href="index.css">
 
     <script src="index.js"></script>
@@ -17,36 +17,23 @@
 <body>
     <div class="page-container" style="background-image: url('background.jpg');">
         <div class="content-container">
-            <div style="text-align: center;">
-                <div className="row">
-                    <h1>Joel Davidson</h1>
-                </div>
-                <div className="row">
-                    <img src="child-picture.jpg" width="200px" alt="A picture of me enjoying pizza"/>
-                </div>
+            <div class="title">
+                <h1>Joel Davidson</h1>
+                <img src="child-picture.jpg" width="200px" alt="A picture of me enjoying pizza"/>
                 <p>A site by and about Joel Davidson</p>
             </div>
-            <hr style="border-width: 0.05px; border-color: white; margin-top: 15px;"/>
-            <div className="row">
-                <div className="2 col"></div>
-                <div className="3 col">
-                    <h5 style="text-align: center">Table of Contents:</h5>
-                    <div>
-                        <h4>Portfolio</h4>
-                        <h5><a href="GamePortfolio/gamePortfolio.html">Games I've Created</a></h5>
-                    </div>
-                    <div>
-                        <h4>Writing</h4>
-                        <h5><a href="Writing/Music/music.html">Music</h5></h5>
-                        <h5><a href="Writing/Books/books.html">Books</a></h5>
-                        <h5><a href="Writing/Games/games.html">Games</a></h5>
-                    </div>
-                </div>
-                <div className="2 col">
-
-                </div>
+            <hr class="border">
+            <h4>Portfolio</h4>
+            <div style="padding-left: 2em;">
+                <h5><a href="GamePortfolio/gamePortfolio.html">Games I've Created</a></h5>
             </div>
-            <hr style="border-width: 0.05px; border-color: white; margin-top: 15px;"></hr>
+            <h4>Writing</h4>
+            <div style="padding-left: 2em;">
+                <h5><a href="Writing/Music/music.html">Music</h5></h5>
+                <h5><a href="Writing/Books/books.html">Books</a></h5>
+                <h5><a href="Writing/Games/games.html">Games</a></h5>
+            </div>
+            <hr class="border">
             <div style="text-align: center; color: #ff9955">joelwdavidson@gmail.com</div>
         </div>
     </div>
