--- a/Writing/Games/games.html
+++ b/Writing/Games/games.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="test/css" href="../../global-css/hub.css">
+    <link rel="stylesheet" href="../../global-css/hub.css">
 </head>
 
 <body>
