--- a/Writing/Music/music.html
+++ b/Writing/Music/music.html
@@ -1,24 +1,20 @@
 <body>
 
 <head>
-    <link rel="stylesheet" type="test/css" href="../../global-css/hub.css">
+    <link rel="stylesheet" href="../../global-css/hub.css">
 </head>
 
 <div class="page-container" style="background-image: url('background.jpg');">
     <div class="content-container">
-        <div style="text-align: center;">
-            <p>Some writings on music.</p>
+        <div class="title">
+            <h3>Some writings on music.</h3>
+            <hr class="border"/>
+            <p><a href="../../index.html">Home</a></p>
         </div>
-        <hr style="border-width: 0.05px; border-color: white; margin-top: 15px"/>
-        <div className="row">
-            <div className="2 col"></div>
-            <div className="3 col">
-                <h5 style="text-align: center">Articles:</h5>
-                <h6><a >50 Musical Pillars - Spring 2022</NavLink></h6>
-            </div>
-            <div className="2 col"></div>
-        </div>
-        <hr style="border-width: 0.05px; border-color: white; margin-top: 15px"/>
+        <hr class="border"/>
+        <h4>Articles:</h4>
+        <h5><a href="./MusicPages/Top50_Spring2022.html">50 Musical Pillars - Spring 2022</a></h5>
+        <hr class="border"/>
         <div style="text-align: center; color: #ff9955">joelwdavidson@gmail.com</div>
     </div>
 </div>
