Added all unadded book reviews

--- a/Writing/Books/books.html
+++ b/Writing/Books/books.html
@@ -2,7 +2,6 @@
 
 <head>
     <link rel="stylesheet" href="../../global-css/hub.css">
-    <script src="books.js"></script>
 </head>
 
 <body>
@@ -11,19 +10,51 @@
         <div style="text-align: center">
             <p>Some writings on books.</p>
         </div>
-        <hr style="border-width: 0.05px; border-color: white; margin-top: 15px"/>
-        <div className="row">
-            <div className="2 col"></div>
-            <div className="3 col">
-                <div id="book-articles"></div>
-                <script>
-                    document.getElementById("book-articles").innerHTML = "test";
-                </script>
-                <script src="books.js"></script>
+        <hr class="border">
+        <h4>Reviews and Reflections:</h4>
+        <div style="padding-left: 2em;">
+            <!-- Reviews -->
+            <h5>2023</h5>
+            <div style="padding-left: 2em;">
+                <!-- 2023 -->
+                <h5><a href="./Reviews/2023/BraveNewWorld.html">Huxley, Aldous - Brave New World</a></h5>
+                <h5><a href="./Reviews/2023/Submission.html">Houellebecq, Michel - Submission</a></h5>
+                <h5><a href="./Reviews/2023/TheGuideOfThePerplexed.html">Maimonides, Moses ben - The Guide of the Perplexed</a></h5>
             </div>
-            <div className="2 col"></div>
+            <h5>2022</h5>
+            <div style="padding-left: 2em;">
+                <!-- 2022 -->
+                <h5><a href="./Reviews/2022/OnTheSoul.html">Aristotle - On the Soul</a></h5>
+                <h5><a href="./Reviews/2022/LoveInTheTimeOfCholera.html">Marquez, Gabriel Garcia Marquez - Love in the Time of Cholera</a></h5>
+                <h5><a href="./Reviews/2022/BloodMeridian.html">McCarthy, Cormac - Blood Meridian</a></h5>
+                <h5><a href="./Reviews/2022/Pan.html">Hamsun, Knut - Pan</a></h5>
+                <h5><a href="./Reviews/2022/Histories.html">Herodotus - Histories</a></h5>
+                <h5><a href="./Reviews/2022/Demian.html">Hesse, Hermann - Demian</a></h5>
+                <h5><a href="./Reviews/2022/Steppenwolf.html">Hesse, Hermann - Steppenwolf</a></h5>
+                <h5><a href="./Reviews/2022/Iliad.html">Homer - Iliad</a></h5>
+                <h5><a href="./Reviews/2022/Satantango.html">Krasznahorkai, László - Satantango</a></h5>
+                <h5><a href="./Reviews/2022/CryingOfLot49.html">Pynchon, Thomas - Crying of Lot 49</a></h5>
+                <h5><a href="./Reviews/2022/AConfession.html">Tolstoy, Leo - A Confession</a></h5>
+                <h5><a href="./Reviews/2022/Aeneid.html">Virgil - Aeneid</a></h5>
+                <h5><a href="./Reviews/2022/Stoner.html">Williams, John - Stoner</a></h5>
+            </div>
+            <h5>2021</h5>
+            <div style="padding-left: 2em;">
+                <!-- 2021 -->
+                <h5><a href="./Reviews/2021/LifeIsADream.html">Calderon del la Barca, Pedro - Life is a Dream</a></h5>
+                <h5><a href="./Reviews/2021/WhiteNoise.html">Delillo, Don - White Noise</a></h5>
+                <h5><a href="./Reviews/2021/Taipei.html">Lin, Tao - Taipei</a></h5>
+                <h5><a href="./Reviews/2021/100YearsOfSolitude.html">Marquez, Gabriel Garcia - 100 Years of Solitude</a></h5>
+                <h5><a href="./Reviews/2021/MasonAndDixon.html">Pynchon, Thomas - Mason & Dixon</a></h5>
+                <h5><a href="./Reviews/2021/AmericanPastoral.html">Roth, Philip - American Pastoral</a></h5>
+            </div>
         </div>
-        <hr style="border-width: 0.05px; border-color: white; margin-top: 15px"/>
+        <hr class="border">
+        <h4>Articles:</h4>
+        <div style="padding-left: 2em;">
+            <!-- Articles  -->
+        </div>
+        <hr class="border">
         <div style="text-align: center; color: #ff9955">joelwdavidson@gmail.com</div>
     </div>
 </div>
