--- a/Writing/Music/MusicPages/Top50_Spring2022.html
+++ b/Writing/Music/MusicPages/Top50_Spring2022.html
@@ -6,7 +6,11 @@
 
 <body>
 <div class="container">
-    <h4>Rock n Roll Pillars - Spring 2022</h4>
+    <div class="header">
+        <h2 class="title">Rock n Roll Pillars - Spring 2022</h2>
+        <p class="subtitle">(Joel Davidson | <a href="../../../index.html">Home</a> | <a href="../music.html">Music</a>)</p>
+        <hr>
+    </div>
     <p>Here's a quick list I threw together 4/19/2022 with 50 of the rock albums which I'd maybe consider to be in my "pillars" of rock music. Anything that was on the proverbial rock fence I didn't include. I tried to not over represent any particular genre or decade, but, alas, I like my noisy, melancholic, and psychedelic rock too much. The list, and much of my music taste in general, is marked by <a href="https://www.scaruffi.com/music/best100.html">Scaruffi</a>, so look there for more original takes. There are also artists I like who don't really have a good 1 album that aren't on the list (ie Holy Modal Rounders and Current 93).</p>
     <ul>
         <li>Bob Dylan - Blonde On Blonde (1966)</li>
@@ -56,7 +60,7 @@
         <li>Roy Montgomery - And Now The Rain Sounds Like Life Is Falling Down Through It (1998)</li>
         <li>Fiery Furnaces - Gallowsbird’s Bark (2003)</li>
         <li>Xui Xui - La Foret (2005)</li>
-        <li>Ruins Of Beverast - Rain Upon THe Impure (2006)</li>
+        <li>Ruins Of Beverast - Rain Upon The Impure (2006)</li>
         <li>Natural Snow Buildings - The Dance Of The Moon And The Sun (2006)</li>
         <li>Joanna Newsom - Ys (2006)</li>
     </ul>
