--- a/Writing/Music/music.html
+++ b/Writing/Music/music.html
@@ -13,7 +13,10 @@
         </div>
         <hr class="border"/>
         <h4>Articles:</h4>
-        <h5><a href="./MusicPages/Top50_Spring2022.html">50 Musical Pillars - Spring 2022</a></h5>
+        <div style="padding-left: 2em;">
+            <!-- Articles -->
+            <h5><a href="./MusicPages/Top50_Spring2022.html">50 Musical Pillars - Spring 2022</a></h5>
+        </div>
         <hr class="border"/>
         <div style="text-align: center; color: #ff9955">joelwdavidson@gmail.com</div>
     </div>
