--- a/Writing/Games/games.html
+++ b/Writing/Games/games.html
@@ -7,18 +7,15 @@
 <body>
 <div class="page-container" style="background-image: url('background.jpg');">
     <div class="content-container">
-        <div style="text-align: center">
+        <div class="title">
             <p>Some writings on games.</p>
         </div>
-        <hr style="border-width: 0.05px; border-color: white; margin-top: 15px"/>
-        <div className="row">
-            <div className="2 col"></div>
-            <div className="3 col">
-                <h5 style="text-align: center;">Articles:</h5>
-            </div>
-            <div className="2 col"></div>
+        <hr class="border">
+        <h4>Articles:</h4>
+        <div style="padding-left: 2em;">
+            <!-- Articles -->
         </div>
-        <hr style="border-width: 0.05px; border-color: white; margin-top: 15px"/>
+        <hr class="border">
         <div style="text-align: center; color: #ff9955">joelwdavidson@gmail.com</div>
     </div>
 </div>
