Added home button

--- a/Writing/Games/games.html
+++ b/Writing/Games/games.html
@@ -8,7 +8,9 @@
 <div class="page-container" style="background-image: url('background.jpg');">
     <div class="content-container">
         <div class="title">
-            <p>Some writings on games.</p>
+            <h3>Some writings on games.</h3>
+            <hr class="border"/>
+            <p><a href="../../index.html">Home</a></p>
         </div>
         <hr class="border">
         <h4>Articles:</h4>
