--- a/Writing/Books/books.html
+++ b/Writing/Books/books.html
@@ -8,7 +8,9 @@
 <div class="page-container" style="background-image: url('background.jpg');">
     <div class="content-container">
         <div style="text-align: center">
-            <p>Some writings on books.</p>
+            <h3>Some writings on books.</h3>
+            <hr class="border"/>
+            <p><a href="../../index.html">Home</a></p>
         </div>
         <hr class="border">
         <h4>Reviews and Reflections:</h4>
