Adding changes to writing.css

--- a/Writing/Books/books.html
+++ b/Writing/Books/books.html
@@ -7,7 +7,7 @@
 <body>
 <div class="page-container" style="background-image: url('background.jpg');">
     <div class="content-container">
-        <div style="text-align: center">
+        <div class="title">
             <h3>Some writings on books.</h3>
             <hr class="border"/>
             <p><a href="../../index.html">Home</a></p>
