--- a/GamePortfolio/gamePortfolio.html
+++ b/GamePortfolio/gamePortfolio.html
@@ -8,153 +8,85 @@
 <body>
 <div class="page-container" style="background-image: url('background.jpg');">
     <div class="content-container">
-        <div className="row">
-            <div className="7 col">
-                <h4>Joel Davidson's Games</h4>
-                <p>On this page I've got some of the game projects I've made over the year. Most aren't made to be played by anyone beyond friends and family, but they're all online and free.</p>
-                <p style="color: #ff9955">email: joelwdavidson@gmail.com</p>
-            </div>
+        <div class="title">
+            <h3>Joel Davidson's Games</h3>
+            <hr class="border"/>
+            <p><a href="../index.html">Home</a></p>
+            <hr class="border"/>
+            <p>Here are some of the game projects I've made. Most aren't made to be played by anyone beyond friends and family, but they're all online and free.</p>
+            <p style="color: #ff9955">email: joelwdavidson@gmail.com</p>
+            <hr class="border"/>
         </div>
-        <div>
-            <div className="row">
-                <div className="4 col">
-                    <br/>
-                    <img src="game-images/AVisitToFriends.jpg" alt="error loading pic" style="width: 200px; align: top;"/>
-                </div>
-                <div className="8 col" style="padding-top: 0px; margin-top: 0px;">
-                    <br/>
-                    <h5><a href="https://store.steampowered.com/app/1766550/A_Visit_to_Friends/">A Visit to Friends</a></h5>
-                    <p>A Visit to Friends is a collection of four dioramas, each with their own themes, characters and puzzles to solve. Catch chickens, put in a day's work, and explore your own subconscious through heterodox methods. All this and more is in store when you take A Visit to Friends.</p>
-                    <i>windows, mac, linux</i>
-                </div>
-            </div>
+        <div class="game-listing">
+            <img src="game-images/AVisitToFriends.jpg" alt="error loading pic" style="width: 200px; align: top;"/>
+            <br/>
+            <h5><a href="https://store.steampowered.com/app/1766550/A_Visit_to_Friends/">A Visit to Friends</a></h5>
+            <p>A Visit to Friends is a collection of four dioramas, each with their own themes, characters and puzzles to solve. Catch chickens, put in a day's work, and explore your own subconscious through heterodox methods. All this and more is in store when you take A Visit to Friends.</p>
+            <i>windows, mac, linux</i>
         </div>
-        <div>
-            <div className="row">
-                <div className="4 col">
-                    <br/>
-                    <img src="game-images/mole-game.jpg" alt="error loading pic" style="width: 200px; align: top;"/>
-                </div>
-                <div className="8 col" style="padding-top: 0px; margin-top: 0px;">
-                    <br/>
-                    <h5><a href="https://store.steampowered.com/app/1158410/Mole_Game/">Mole Game</a></h5>
-                    <p>A grid based puzzle game about being a mole and all that comes with that.</p>
-                    <i>windows</i>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div className="row">
-                <div className="4 col">
-                    <br/>
-                    <img src="game-images/merry-melee.png" alt="error loading pic" style="width: 200px; align: top;"/>
-                </div>
-                <div className="8 col" style="padding-top: 0px; margin-top: 0px;">
-                    <br/>
-                    <h5><a href="https://flyingjello.itch.io/merry-melee">Merry Melee</a></h5>
-                    <p>A rouge like where you fend off holiday hordes with various holiday iconography.</p>
-                    <i>windows, mac</i>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div className="row">
-                <div className="4 col">
-                    <br/>
-                    <img src="game-images/mole-game-2.png" alt="error loading pic" style="width: 200px; align: top;"/>
-                </div>
-                <div className="8 col" style="padding-top: 0px; margin-top: 0px;">
-                    <br/>
-                    <h5><a href="https://flyingjello.itch.io/mole-game-2">Mole Game 2</a></h5>
-                    <p>The visual novel which journies further into psyche of the protagonist from Mole Game 1, the Mole.</p>
-                    <i>windows, mac</i>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div className="row">
-                <div className="4 col">
-                    <br/>
-                    <img src="game-images/trick-or-treat-tactics.png" alt="error loading pic" style="width: 200px; align: top;"/>
-                </div>
-                <div className="8 col" style="padding-top: 0px; margin-top: 0px;">
-                    <br/>
-                    <h5><a href="https://flyingjello.itch.io/trick-tactics">Trick or Treat Tactics</a></h5>
-                    <p>A grid rogue-like.</p>
-                    <i>windows, mac</i>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div className="row">
-                <div className="4 col">
-                    <br/>
-                    <img src="game-images/orange-guy-game.gif" alt="error loading pic" style="width: 200px; align: top;"/>
-                </div>
-                <div className="8 col" style="padding-top: 0px; margin-top: 0px;">
-                    <br/>
-                    <h5><a href="#">Untitled Game</a></h5>
-                    <p>A metroidvania where you trek through dream landscapes and search for puzzle pieces. Not publicly available.</p>
-                    <i>N/A</i>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div className="row">
-                <div className="4 col">
-                    <br/>
-                    <img src="game-images/fps-demo.gif" alt="error loading pic" style="width: 200px; align: top;"/>
-                </div>
-                <div className="8 col" style="padding-top: 0px; margin-top: 0px;">
-                    <br/>
-                    <h5><a href="#">Untitled Game</a></h5>
-                    <p>A first person shooter about speedrunning through a map in search for keys to the end of the level. Not publicly available.</p>
-                    <i>N/A</i>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div className="row">
-                <div className="4 col">
-                    <br/>
-                    <img src="game-images/robber-rups.png" alt="error loading pic" style="width: 200px; align: top;"/>
-                </div>
-                <div className="8 col" style="padding-top: 0px; margin-top: 0px;">
-                    <br/>
-                    <h5><a href="https://flyingjello.itch.io/robber-rups">Robber Rups</a></h5>
-                    <p>At tactical puzzle game where you play as a robber distracting dogs with firecrackers.</p>
-                    <i>web</i>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div className="row">
-                <div className="4 col">
-                    <br/>
-                    <img src="game-images/test-your-skills.png" alt="error loading pic" style="width: 200px; align: top;"/>
-                </div>
-                <div className="8 col" style="padding-top: 0px; margin-top: 0px;">
-                    <br/>
-                    <h5><a href="https://flyingjello.itch.io/test-your-skills">Test Your Skills</a></h5>
-                    <p>A satirical skill test game. Run through four different highly sophisticated skill games to test luck, endurance, aim, and speed.</p>
-                    <i>windows, mac</i>
-                </div>
-            </div>
-        </div>
-        <div>
-            <div className="row">
-                <div className="4 col">
-                    <br/>
-                    <img src="game-images/western-rpg.png" alt="error loading pic" style="width: 200px; align: top;"/>
-                </div>
-                <div className="8 col" style="padding-top: 0px; margin-top: 0px;">
-                    <br/>
-                    <h5><a href="https://flyingjello.itch.io/western-rpg">Western RPG</a></h5>
-                    <p>A pastoral 2D walking simulator journey through a country home.</p>
-                    <i>web</i>
-                </div>
-            </div>
-        </div>
+        <hr class="border"/>
+
+        <img src="game-images/mole-game.jpg" alt="error loading pic" style="width: 200px; align: top;"/>
+        <br/>
+        <h5><a href="https://store.steampowered.com/app/1158410/Mole_Game/">Mole Game</a></h5>
+        <p>A grid based puzzle game about being a mole and all that comes with that.</p>
+        <i>windows</i>
+
+        <br/>
+        <img src="game-images/merry-melee.png" alt="error loading pic" style="width: 200px; align: top;"/>
+        <br/>
+        <h5><a href="https://flyingjello.itch.io/merry-melee">Merry Melee</a></h5>
+        <p>A rouge like where you fend off holiday hordes with various holiday iconography.</p>
+        <i>windows, mac</i>
+
+        <br/>
+        <img src="game-images/mole-game-2.png" alt="error loading pic" style="width: 200px; align: top;"/>
+        <br/>
+        <h5><a href="https://flyingjello.itch.io/mole-game-2">Mole Game 2</a></h5>
+        <p>The visual novel which journies further into psyche of the protagonist from Mole Game 1, the Mole.</p>
+        <i>windows, mac</i>
+
+        <br/>
+        <img src="game-images/trick-or-treat-tactics.png" alt="error loading pic" style="width: 200px; align: top;"/>
+        <br/>
+        <h5><a href="https://flyingjello.itch.io/trick-tactics">Trick or Treat Tactics</a></h5>
+        <p>A grid rogue-like.</p>
+        <i>windows, mac</i>
+
+        <br/>
+        <img src="game-images/orange-guy-game.gif" alt="error loading pic" style="width: 200px; align: top;"/>
+        <br/>
+        <h5><a href="#">Untitled Game</a></h5>
+        <p>A metroidvania where you trek through dream landscapes and search for puzzle pieces. Not publicly available.</p>
+        <i>N/A</i>
+
+        <br/>
+        <img src="game-images/fps-demo.gif" alt="error loading pic" style="width: 200px; align: top;"/>
+        <br/>
+        <h5><a href="#">Untitled Game</a></h5>
+        <p>A first person shooter about speedrunning through a map in search for keys to the end of the level. Not publicly available.</p>
+        <i>N/A</i>
+
+        <br/>
+        <img src="game-images/robber-rups.png" alt="error loading pic" style="width: 200px; align: top;"/>
+        <br/>
+        <h5><a href="https://flyingjello.itch.io/robber-rups">Robber Rups</a></h5>
+        <p>At tactical puzzle game where you play as a robber distracting dogs with firecrackers.</p>
+        <i>web</i>
+
+        <br/>
+        <img src="game-images/test-your-skills.png" alt="error loading pic" style="width: 200px; align: top;"/>
+        <br/>
+        <h5><a href="https://flyingjello.itch.io/test-your-skills">Test Your Skills</a></h5>
+        <p>A satirical skill test game. Run through four different highly sophisticated skill games to test luck, endurance, aim, and speed.</p>
+        <i>windows, mac</i>
+
+        <br/>
+        <img src="game-images/western-rpg.png" alt="error loading pic" style="width: 200px; align: top;"/>
+        <br/>
+        <h5><a href="https://flyingjello.itch.io/western-rpg">Western RPG</a></h5>
+        <p>A pastoral 2D walking simulator journey through a country home.</p>
+        <i>web</i>
     </div>
 </div>
 </body>
