Added design note pages

--- a/Writing/Misc/DesignNotes/designNotes.html
+++ b/Writing/Misc/DesignNotes/designNotes.html
@@ -1,22 +1,22 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="../../global-css/hub.css">
+    <link rel="stylesheet" href="../../../global-css/hub.css">
 </head>
 
 <body>
 <div class="page-container" style="background-image: url('background.jpg');">
     <div class="content-container">
         <div class="title">
-            <h3>Some writings on games.</h3>
+            <h3>Design Notes</h3>
             <hr class="border"/>
-            <p><a href="../../index.html">Home</a></p>
+            <p><a href="../../../index.html">Home</a> | <a href="../misc.html">Misc.</a></p>
         </div>
         <hr class="border">
         <h4>Articles:</h4>
         <div style="padding-left: 2em;">
             <!-- Articles -->
-            <h5><a href="./GamePages/2023/DonutDodo.html">Donut Dodo Analysis!</a></h5>
+            <h5><a href="./Pages/2023/RogueLife.html">Rogue Life</a></h5>
         </div>
         <hr class="border">
         <div style="text-align: center; color: #ff9955">joelwdavidson@gmail.com</div>
@@ -24,4 +24,4 @@
 </div>
 
 </body>
-</html>
+</html> 
