--- a/Writing/Misc/misc.html
+++ b/Writing/Misc/misc.html
@@ -8,7 +8,7 @@
 <div class="page-container" style="background-image: url('background.jpg');">
     <div class="content-container">
         <div class="title">
-            <h3>Some writings on games.</h3>
+            <h3>Some miscellaneous notes.</h3>
             <hr class="border"/>
             <p><a href="../../index.html">Home</a></p>
         </div>
@@ -16,7 +16,7 @@
         <h4>Articles:</h4>
         <div style="padding-left: 2em;">
             <!-- Articles -->
-            <h5><a href="./GamePages/2023/DonutDodo.html">Donut Dodo Analysis!</a></h5>
+            <h5><a href="./DesignNotes/designNotes.html">Design Notes</a></h5>
         </div>
         <hr class="border">
         <div style="text-align: center; color: #ff9955">joelwdavidson@gmail.com</div>
