--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <h5><a href="Writing/Music/music.html">Music</h5></h5>
                 <h5><a href="Writing/Books/books.html">Books</a></h5>
                 <h5><a href="Writing/Games/games.html">Games</a></h5>
+                <h5><a href="Writing/Misc/misc.html">Misc.</a></h5>
             </div>
             <hr class="border">
             <div style="text-align: center; color: #ff9955">joelwdavidson@gmail.com</div>
