--- a/Writing/Books/books.html
+++ b/Writing/Books/books.html
@@ -19,9 +19,11 @@
             <h5>2023</h5>
             <div style="padding-left: 2em;">
                 <!-- 2023 -->
+                <h5><a href="./Reviews/2023/2666.html">Bolano, Roberto - 2666</a></h5>
                 <h5><a href="./Reviews/2023/BraveNewWorld.html">Huxley, Aldous - Brave New World</a></h5>
                 <h5><a href="./Reviews/2023/Submission.html">Houellebecq, Michel - Submission</a></h5>
                 <h5><a href="./Reviews/2023/TheGuideOfThePerplexed.html">Maimonides, Moses ben - The Guide of the Perplexed</a></h5>
+                <h5><a href="./Reviews/2023/SongOfRoland.html">Unknown - Song of Roland</a></h5>
             </div>
             <h5>2022</h5>
             <div style="padding-left: 2em;">
