--- a/Writing/Books/books.html
+++ b/Writing/Books/books.html
@@ -19,6 +19,7 @@
             <h5>2023</h5>
             <div style="padding-left: 2em;">
                 <!-- 2023 -->
+                <h5><a href="./Reviews/2023/Proslogion.html">Anselm of Canterbury - Proslogion</a></h5>
                 <h5><a href="./Reviews/2023/2666.html">Bolano, Roberto - 2666</a></h5>
                 <h5><a href="./Reviews/2023/BraveNewWorld.html">Huxley, Aldous - Brave New World</a></h5>
                 <h5><a href="./Reviews/2023/Submission.html">Houellebecq, Michel - Submission</a></h5>
