--- a/Writing/Books/books.html
+++ b/Writing/Books/books.html
@@ -16,9 +16,21 @@
         <h4>Reviews and Reflections:</h4>
         <div style="padding-left: 2em;">
             <!-- Reviews -->
+            <h5>2024</h5>
+            <div style="padding-left: 2em;">
+                <h5><a href="./Reviews/2024/SavageDetectives.html">Bolano, Reberto - Savage Detectives</a></h5>
+            </div>
             <h5>2023</h5>
             <div style="padding-left: 2em;">
                 <!-- 2023 -->
+                <h5><a href="./Reviews/2023/Crash.html">Ballard, J. G. - Crash</a></h5>
+                <h5><a href="./Reviews/2023/DiscourseOnMethod.html">Descartes, Rene - Discourse on Method</a></h5>
+                <h5><a href="./Reviews/2023/JourneyToTheEndOfTheNight.html">Céline, Louis-Ferdinand - Journey to the End of the Night</a></h5>
+                <h5><a href="./Reviews/2023/LordJim.html">Conrad, Joseph - Lord Jim</a></h5>
+                <h5><a href="./Reviews/2023/MadameBovary.html">Flaubert, Gustave - Madame Bovary</a></h5>
+                <h5><a href="./Reviews/2023/TheCanterburyTales.html">Chaucer, Geoffrey - The Canterbury Tales</a></h5>
+                <h5><a href="./Reviews/2023/TheMeditations.html">Rene, Descartes - The Meditations</a></h5>
+                <h5><a href="./Reviews/2023/TheOgre.html">Tournier, Michel - The Ogre</a></h5>
                 <h5><a href="./Reviews/2023/Proslogion.html">Anselm of Canterbury - Proslogion</a></h5>
                 <h5><a href="./Reviews/2023/2666.html">Bolano, Roberto - 2666</a></h5>
                 <h5><a href="./Reviews/2023/BraveNewWorld.html">Huxley, Aldous - Brave New World</a></h5>
